# dddApp

./: .envExample  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose.yaml  pyproject.toml
src/: asgi.py  config.py  main.py
src/application/: dto.py  event_handlers.py
src/application/analytics/: dto.py  usecases.py
src/application/notifications/: usecases.py
src/application/ports/: event_bus.py  mailing.py  repositories.py
src/application/usecases/analytics/: usecases.py
src/application/usecases/notifications/: usecases.py
src/application/usecases/orders/: dto.py  mapper.py  usecases.py
src/application/usecases/users/: mapper.py  usecases.py
src/application/usecases/warehouse/: dto.py  mapper.py  usecases.py
src/application/users/: dto.py  mapper.py  usecases.py
src/domain/: entities.py  events.py  exceptions.py  usecase.py  valueobjects.py
src/domain/analytics/: entity.py
src/domain/notifications/: valueobjects.py
src/domain/orders/: aggregates.py  entities.py  events.py  valueobjects.py
src/domain/users/: entities.py  events.py  exceptions.py  valueobjects.py
src/domain/warehouse/: entities.py  exceptions.py  valueobjects.py
src/infrastructure/broker/: consumer.py  dto_factory.py  handlers.py  main.py  outbox_processor.py  producer.py
src/infrastructure/mailing/: client.py
src/infrastructure/sqlalchemy/: __init__.py  exceptions.py  main.py  model.py  outbox_model.py  uow.py
src/presentation/: di.py  providers.py  services.py
src/presentation/api/: exception_handlers.py  request.py  response.py
(+21 files in other folders)
